2008-09-06  Juergen Wieferink <wieferink@freenet.de>

	* src/term.c (enhanced_recursion):  Add curly braces {} to the list of
	characters that must be escaped in postscript enhanced mode.
	Bug #1968636

2008-09-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (load_tic_functions): Allow axis tick labels to be defined
	by iteration over expressions giving the label and position.
		set xtics for [i=1:N] ( label(i) position(i) {level} )
	Based on a patch by Shige Takeno.

2008-09-05  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/gadgets.c src/gadgets.h src/graph3d.c src/save.c   
	src/set.c src/show.c src/unset.c NEWS:
	New option 'set view equal_axes' that forces x and y axes in a 3D plot
	to use the same scale.  This is similar to 'set size square' in 2D.
	Bug #2004205. Feature request #2006851.

2008-09-05  Peter Danenberg  <danenberg@users.sourceforge.net>

	* term/cairo.trm (cairopng_do_crop): Crop option for pngcairo.
	SF Patch #1873297 

2008-09-03  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (add_tic_user): NULL labels are OK if requested via
	'set xtics (x1, x2, ...)' as opposed to read from a data file.

	* docs/gnuplot.doc:  Add minimal section on binary skip=foo:baz

2008-08-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.h src/axis.c(gen_tics) src/set.c(set_tics) src/show.c
	src/graphics.c (plot_border): Add an axis tic attribute "rangelimited".
	If set, the border and tics for this axis will be drawn only for the
	range of the data, rather than the full range of the axis.

2008-08-15  Ethan Merritt  <merritt@u.washington.edu>

	* term/dumb.trm: Accept terminal size in the form used by most other
	terminal drivers.   'set term dumb size 80,23"

	* src/set.c (set_tic_prop) src/graph3d.c (ztick_callback):
	Allow tic labels on z axis to have 'tc palette z'
	Feature request #1689545

2008-08-14  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c src/command.h src/command.c (do_string) src/mouse.c: